--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <div>
                 <div class="mb-3">
                     <label class="form-label" for="effective-date">Data ważności kursów</label>
-                    <input class="form-control" type="date" name="effective-date" id="effective-date" value="2023-01-01"/>
+                    <input class="form-control" type="date" name="effective-date" id="effective-date"/>
                     <span id="error" class="text-danger"></span>
                 </div>
             </div>
