--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
             color: aliceblue;
             font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
         }
+         .form-control {
+            color: black;
+        }
     </style>
 
     
