--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
         <form>
             <div class="mb-8">
-                <h2 class="display-2">Kalkulator walut</h2>
+                <h2 style="font-weight: 500;" class="display-2">Kalkulator walut</h2>
             </div>
             <div>
                 <div class="mb-3">
